--- a/HelloWeb/HelloWeb.csproj
+++ b/HelloWeb/HelloWeb.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Loggers\" />
+    <Folder Include="Providers\" />
+  </ItemGroup>
+
 </Project>
