--- a/FileDownload/Properties/launchSettings.json
+++ b/FileDownload/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:33278",
-      "sslPort": 44317
+      "applicationUrl": "http://localhost:61243",
+      "sslPort": 44311
     }
   },
   "profiles": {
-    "HelloWeb": {
+    "FileDownload": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7236;http://localhost:5275",
+      "applicationUrl": "https://localhost:7299;http://localhost:5230",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
